fix(parallel-computing): add hostfile
Signed-off-by: Vadym Yaroshchuk <contact@y9vad9.com>